; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_rtcfifo.c_check_fifo_magic.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_rtcfifo.c_check_fifo_magic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"rtcfifo not prepared!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @check_fifo_magic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_fifo_magic(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 (...) @rtc_fifo_check_magic()
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @luaL_error(i32* %6, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @rtc_fifo_check_magic(...) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
